# py_counts_tc

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/py_counts_tc/: __init__.py  py_counts_tc.py  zen.txt
tests/: test_py_counts_tc.py
