[tool.poetry]
name = "py_counts_tc"
version = "0.1.0"
description = "Calculate the number of words in a text file"
authors = ["Tim Clarke"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
